--- a/porfolio.html
+++ b/porfolio.html
@@ -29,6 +29,14 @@
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
+        /* For devices with a max-width of 768px (tablets and phones) */
+@media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 10px;
+  }
+}
+
         .custom-cursor {
     position: fixed;
     top: 0;
