--- a/porfolio.html
+++ b/porfolio.html
@@ -521,8 +521,7 @@ section {
     <section id="contact" class="hidden slide-in-left">
         <h2 class="interactive">Contact</h2>
         <div class="card"  style="max-width: 1000px;">
-            <p style="text-align: center;">Email: <a href="mailto:ananyabshetty27228@gmail.com">ananyabshetty27228@gmail.com</a></p>
-            <p style="text-align: center;">Phone: 9880919663</p>
+            <p style="text-align: center;">Email: <a href="mailto:ananyabshetty27228@gmail.com">ananyashetty.works@gmail.com</a></p>
             <p style="text-align: center;"><a href="https://www.linkedin.com/in/ananya-b-shetty-8a9676241">LinkedIn</a> | <a href="https://www.github.com/ananyabshetty">GitHub</a></p>
         </div>
     </section>
